// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rule 1`] = `
Object {
  "Button": "Button-hash m-anon-hash-1 m-background-hash-1 m-anon-hash-1",
}
`;

exports[`rule 2`] = `
Object {
  "Button": "Button-hash m-anon-hash-2 m-background-hash-2",
}
`;

exports[`transform 1`] = `
Object {
  "Button4": "Button4-hash",
}
`;

exports[`transform 2`] = `
Object {
  "Button4": "Button4-hash",
}
`;

exports[`transform 3`] = `
Object {
  "Button3": "Button3-hash",
}
`;

exports[`transform 4`] = `
Object {
  "Button3": "Button3-hash",
}
`;
